# coordinator

./: .gitignore  Cargo.toml  README.md  REFACTORING_PLAN.md  STATUS.md  Settings.toml  build.sh  build_ui.sh  copy_node_creds.sh  dist-workspace.toml  download_release.sh  flake.nix  justfile  settings.toml
.cargo/: config.toml
.doppler/: README.md  (+3 more)
crates/coordinator/: Cargo.toml  build.rs
crates/coordinator-core/: Cargo.toml
crates/coordinator-core/src/: errors.rs  lib.rs  types.rs  validation.rs
crates/coordinator-wasm/: Cargo.toml
crates/coordinator-wasm/src/: lib.rs
crates/coordinator-wasm/src/keymeld/: mod.rs
crates/coordinator-wasm/src/nostr/: core.rs  mod.rs  password_crypto.rs  wasm.rs
crates/coordinator-wasm/src/wallet/: core.rs  mod.rs  wasm.rs
crates/coordinator/frontend/admin/: index.html
crates/coordinator/frontend/public/: README.md  auth_manager.js  competitions.js  crypto_bridge.js  entries.js  entry.js  index.html  keymeld_client.js  keymeld_crypto.js  leader_board.js  main.js  musig_session_registry.js  payouts.js  styles.css
crates/coordinator/migrations/competitions/: 20260110232006_add_keymeld_session.down.sql  20260110232006_add_keymeld_session.up.sql  20260114172455_add_encrypted_keymeld_private_key.down.sql  20260114172455_add_encrypted_keymeld_private_key.up.sql  20260118220000_add_invoice_expires_at.down.sql  20260118220000_add_invoice_expires_at.up.sql  20260119000000_add_keymeld_keygen_completed_at.down.sql  20260119000000_add_keymeld_keygen_completed_at.up.sql  20260119030000_add_invoices_settled_at.down.sql  20260119030000_add_invoices_settled_at.up.sql  20260129000000_add_awaiting_attestation_at.down.sql  20260129000000_add_awaiting_attestation_at.up.sql
crates/coordinator/migrations/users/: 20250803153659_create_schema.up.sql  20260119000000_add_email_auth.down.sql  20260119000000_add_email_auth.up.sql
crates/coordinator/src/: config.rs  lib.rs  main.rs  startup.rs
crates/coordinator/src/api/: extractors.rs  mod.rs
crates/coordinator/src/api/routes/: mod.rs
crates/coordinator/src/api/routes/coordinator/: coordinator_routes.rs  mod.rs
crates/coordinator/src/api/routes/home/: get.rs
crates/coordinator/src/api/routes/pages/: admin.rs  public.rs
crates/coordinator/src/api/routes/system/: bitcoin_wallet.rs  health_check.rs  mod.rs  user_info.rs
crates/coordinator/src/api/views/: mod.rs
crates/coordinator/src/domain/: mod.rs  scoring.rs
crates/coordinator/src/domain/competitions/: coordinator.rs  mod.rs  store.rs
crates/coordinator/src/domain/competitions/states/: awaiting_attestation.rs  awaiting_escrow.rs  awaiting_signatures.rs  collecting_entries.rs  completed.rs  contract_created.rs  created.rs  entries_submitted.rs  escrow_confirmed.rs  event_created.rs  failed.rs  funding.rs  mod.rs  processor.rs  settling.rs
crates/coordinator/src/domain/invoices/: invoice_subscriber.rs  invoice_watcher.rs  mod.rs  payment_subscriber.rs  payout_watcher.rs
crates/coordinator/src/domain/users/: info.rs  mod.rs  password.rs  store.rs
crates/coordinator/src/infra/: bitcoin.rs  bitcoin_mock.rs  db.rs  escrow.rs  keymeld.rs  keymeld_mock.rs  lightning.rs  lightning_mock.rs  mod.rs  oracle.rs  oracle_mock.rs  secrets.rs
crates/coordinator/src/templates/: README.md  mod.rs  shared_map.rs
crates/coordinator/src/templates/admin/: dashboard.rs  location_selector.rs  mod.rs  top_cities.rs  wallet.rs
crates/coordinator/src/templates/components/: mod.rs  modals.rs  navbar.rs
crates/coordinator/src/templates/fragments/: competition_row.rs  entry_form.rs  fee_estimates.rs  leaderboard.rs  mod.rs  wallet_balance.rs  wallet_outputs.rs
crates/coordinator/src/templates/layouts/: admin.rs  base.rs  mod.rs
crates/coordinator/src/templates/pages/: competitions.rs  entries.rs  mod.rs
crates/coordinator/src/templates/shared/: authorized_client.js  htmx_auth.js  modal_utils.js  navbar.js  theme.js
crates/coordinator/src/templates/static/: bolt11.min.js  loader.js  location_selector.js  styles.css
crates/market_maker/: Cargo.toml  README.md
crates/market_maker/src/: utils.rs
crates/server/: Cargo.toml  README.md
crates/server/admin_ui/: index.html  main.js
crates/server/migrations/competitions/: 20250803153207_create_schema.up.sql
crates/server/src/: bitcoin_client.rs  config.rs  db.rs  escrow.rs  file_utils.rs  lib.rs  ln_client.rs  main.rs  oracle_client.rs  secrets.rs  startup.rs  utils.rs
crates/server/src/domain/: competition_coordinator.rs  competition_data.rs  competition_db_migrations.rs  mod.rs
crates/server/src/domain/competitions/: coordinator.rs  db_migrations.rs  mod.rs  store.rs
crates/server/src/domain/invoices/: invoice_watcher.rs  mod.rs  payout_watcher.rs
crates/server/src/domain/users/: db_migrations.rs  info.rs  mod.rs  store.rs
crates/server/src/routes/: mod.rs
crates/server/src/routes/competitions/: mod.rs
crates/server/src/routes/coordinator/: coordinator_routes.rs
crates/server/src/routes/home/: get.rs
crates/server/src/routes/system/: bitcoin_wallet.rs  health_check.rs  user_info.rs
crates/server/test_data/: .gitignore  fake_coordinator_private_key.pem  fake_oracle_private_key.pem
crates/server/test_data/alice_ln/: admin.macaroon  tls.cert
crates/server/test_data/bob_ln/: .gitignore  admin.macaroon  tls.cert
crates/server/test_data/coord_ln/: admin.macaroon  tls.cert
crates/server/tests/server/: bitcoin_integration_test.rs  competition_integration_test.rs  e2e_test.rs  full_integration_test.rs  helpers.rs  main.rs
crates/server/ui/: competitions.js  entries.js  entry.js  index.html  leader_board.js  main.js  navbar.js  styles.css  utils.js
crates/synth/: Cargo.toml
crates/synth/src/: config.rs  lib.rs
crates/synth/src/client/: admin.rs  auth.rs  competitions.rs  entries.rs  mod.rs  wallet.rs
crates/synth/src/crypto/: keymeld.rs  keys.rs  mod.rs  payout.rs
crates/synth/src/db/: mod.rs
crates/synth/src/runner/: mod.rs
crates/synth/src/scenarios/: full_lifecycle.rs  mod.rs  types.rs
crates/synth/src/server/: metrics.rs  mod.rs  routes.rs
(+95 files in other folders)
