[package]
name = "coordinator-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM client for coordinator - Nostr auth, wallet signing, keymeld integration"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
coordinator-core.workspace = true

# WASM
wasm-bindgen.workspace = true
wasm-logger.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

# Nostr
nostr-sdk.workspace = true

# Bitcoin
bdk_wallet.workspace = true
dlctix.workspace = true

# Keymeld SDK - for remote MuSig2 signing
keymeld-sdk.workspace = true

# Crypto
blake2.workspace = true
sha2.workspace = true
rand.workspace = true
rand_chacha.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Utilities
secrecy.workspace = true
thiserror.workspace = true
log.workspace = true
async-trait.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
nostr-sdk = { version = "0.38", features = ["indexeddb", "nip07"] }
getrandom.workspace = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
