[package]
name = "coordinator-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM client for coordinator - Nostr auth, wallet signing, keymeld integration"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable keymeld integration for remote MuSig2 signing
# NOTE: Currently disabled by default because secp256k1-sys v0.11.0 (from keymeld)
# has WASM compilation issues with memmove. Upstream fix needed in keymeld.
keymeld = ["dep:keymeld-sdk"]

[dependencies]
coordinator-core = { path = "../coordinator-core", default-features = false }

# WASM
wasm-bindgen.workspace = true
wasm-logger.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

# Nostr - use WASM-compatible features only
nostr-sdk = { version = "0.38", default-features = false, features = ["indexeddb", "nip07", "nip04", "nip44"] }

# Bitcoin - use without network features for WASM
bdk_wallet = { version = "1.0.0", default-features = false, features = ["std", "keys-bip39"] }
dlctix = { git = "https://github.com/tee8z/dlctix", branch = "external-signing-api", default-features = false }

# Keymeld SDK - for remote MuSig2 signing (WASM-compatible with v0.1.3+)
keymeld-sdk = { git = "https://github.com/tee8z/keymeld", tag = "v0.1.3", default-features = false, features = ["client", "dlctix"], optional = true }

# Crypto
blake2.workspace = true
sha2.workspace = true
rand.workspace = true
rand_chacha.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Utilities
secrecy.workspace = true
thiserror.workspace = true
log.workspace = true
async-trait.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom 0.2 with js feature for older dependencies
getrandom.workspace = true
# getrandom 0.3 with wasm_js feature for rand 0.9+
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
