[package]
name = "market_maker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tee8z/5day4cast"

[dependencies]
config = "0.14.0"
clap = { version = "4.3.23", features = ["derive", "env"] }
dlctix = "0.0.6"
fern = { version = "0.6.2", features = ["colored"] }
jsonrpc = { version = "0.18.0", features = ["simple_http"] }
log = "0.4.20"
reqwest = "0.12.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
toml = "0.8.10"
