[package]
name = "server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tee8z/5day4cast"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.7.5", features = [
    "macros",
    "tokio",
    "tracing",
    "multipart",
    "http1",
] }
base64 = "0.22.1"
config = "0.14.0"
clap = { version = "4.3.23", features = ["derive", "env"] }
dlctix = "0.0.6"
duckdb = { version = "1.0.0" }
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
hex = "0.4.3"
hyper = "1.4.0"
h2 = "0.4.5"
log = "0.4.18"
mime = "0.3.17"
num_cpus = "1.16.0"
openssl = { version = "0.10", features = ["vendored"] }
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
reqwest-middleware = { version = "0.3.3", features = ["json", "rustls-tls"] }
reqwest-retry = { version = "0.6.1" }
scooby = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.62"
time = { version = "0.3.36", features = [
    "parsing",
    "formatting",
    "macros",
    "serde",
] }
tokio = { version = "1.35.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-util = "0.7.9"
toml = "0.8.10"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
uuid = { version = "1.4.1", features = ["v7", "serde"] }

[dev-dependencies]
tower = "0.4.13"
